ui/src/css/kif-menu.less
@import-once "elements.less";
@import-once "kif-common";

//Menu and body
@menu-color: #DAF5F8;
@menu-width: 100%;
@menu-height: 50px;
@menu-text-color: black;
@menu-position: fixed;
@img-width: 194px;
@img-height: 50px;

.menu-item () {
    float: left;
    width: (@menu-width / 3);
    height: @menu-height;
}

.menu-content () {
    height: 100%;
    width: 100%;
    text-align: center;
    font-size: 200%;
    font-family: "Helvetica Neue", Arial, sans-serif;
}

#menu {
    .drop-shadow(0px, 2px, 10px, 0.5);
    background: @menu-color;
    width: @menu-width;
    height: @menu-height;
    position: @menu-position;
    z-index: 100;
    padding-top: 10px;
    padding-bottom: 10px;

    ul {
        padding: 0;
        margin: 0;

        li {
            display: inline;

            div {
                .menu-item;
                h1 { .menu-content;
                    color: @menu-text-color;
                }
                
                a { 
                    .menu-content;
                    text-decoration: none;
                    #download-link-area {
                        &:hover {
                            .gradient(
                                lighten(@download-button-color-start, 10%),
                                lighten(@download-button-color-start, 10%),
                                lighten(@download-button-color-stop, 10%),
                            );
                        };
                        &:active {
                            .inner-shadow(2px, 4px, 6px, 0.5);
                        };
                        display: block;
                        .gradient(
                            @download-button-color-start,
                            @download-button-color-start,
                            @download-button-color-stop
                        );
                        //background: @download-button-color;
                        color: @download-text-color;
                        .bordered(
                            darken(@download-button-color-start, 33%), 
                            darken(@download-button-color-start, 33%), 
                            darken(@download-button-color-start, 33%), 
                            darken(@download-button-color-start, 33%)
                        );
                        .rounded(10px);
                        text-align: center;
                        height: 50px;
                        width: 300px;
                        float: right;
                        margin-right: 10px;
                    }
                }

                img { 
                    .menu-content; 
                    width: @img-width; 
                    height: @img-height;
                    margin-left: 10px;
                }
            }

            #download-container { text-align: center; }
        }
    }
}

.ui-corner-all { 
    border-radius: 0px;
    border: none;
}

